added sample label to ViewControllerOne

--- a/CharacterFortunes/Base.lproj/Main.storyboard
+++ b/CharacterFortunes/Base.lproj/Main.storyboard
@@ -15,8 +15,29 @@
                     <view key="view" contentMode="scaleToFill" id="DZc-ur-0HN">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YXR-Ip-sM2">
+                                <rect key="frame" x="0.0" y="282" width="600" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="bG3-5I-T6W"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="bG3-5I-T6W"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="sampleText" destination="YXR-Ip-sM2" id="fs2-uo-Ltt"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p5l-Pf-5EG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
